Fix div overlapping toggle button on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,6 @@ html::before {
 	position: fixed;
 	height: 120vh;
 	width: 100vw;
-	content: "That's all Folks!";
   @apply p-9 text-center text-purple-950 dark:text-white text-xl;
 }
 
